# evolution-sim

./: Cargo.toml  shader.wgsl
src/: beter_nn.rs  buffer.rs  lib.rs  main.rs  neural_network.rs  new_sim.rs  renderer.rs  shader.rs  uniform.rs
